# uhrwerk

./: .gitignore  Cargo.toml  README.md
src/: default.rs  file_handler.rs  hours.rs  main.rs  minutes.rs  prepositions.rs  special_cases.rs  template.rs  time_in_words.rs  time_processing.rs
src/time-in-words-templates/: de_1.kdl  de_1.ron  de_1.toml  en_1.toml  en_1.toml_backup
time-in-words-templates/: de_1.ron  en_1.ron
