[package]
name = "uhrwerk"
version = "0.1.0"
authors = ["VuiMuich <jm.spam@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = "2.33.0"
# dhall = "0.10.1"
rand = "0.8.4"
serde = { version = "1.0.104", features = ["derive"] }
toml = "0.5.5"
